--- a/assets/CSS/login.css
+++ b/assets/CSS/login.css
@@ -25,7 +25,7 @@ form {
   width: 350px;
   height: 400px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  backdrop-filter: blur(2px);
+  backdrop-filter: blur(4px);
   font-family: "poppins", sans-serif;
 }
 
@@ -63,7 +63,6 @@ h1 {
 .input-box i {
   align-self: center;
   position: relative;
-  top: 4px;
   transform: translateX(-200%);
 }
 
@@ -78,6 +77,7 @@ h1 {
   justify-content: baseline;
   font-size: 16px;
   color: #00ffdd;
+  text-shadow: 2px 2px #7500b88f;
   font-weight: 600;
   accent-color: #00ffdd;
 }
@@ -89,6 +89,7 @@ h1 {
 .remember-forgot a {
   text-decoration: none;
   font-weight: 600;
+  color: #08004d;
 }
 
 .remember-forgot a:hover {
@@ -136,7 +137,9 @@ h1 {
   text-decoration: none;
   font-weight: 200;
   padding-left: 10px;
-  font-weight: 400;
+  font-weight: 600;
+  color: #00ffdd;
+  text-shadow: 2px 2px #7500b88f;
 }
 
 .register a:hover {
@@ -144,5 +147,5 @@ h1 {
 }
 
 .register a:visited {
-  color: #ff3300;
+  color: #eb0029;
 }
