--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -79,8 +79,7 @@ background-position: center;  /* Para centralizar a imagem (opcional) */
     bottom: 200px;
 }
 
-nav ul{
-    background-color: ;
+.navegacao ul{
     width: 100%;
     height: 100%;
     padding: 10px 10px 10px 10px;
@@ -97,6 +96,24 @@ nav ul{
     text-decoration: none;
     font-weight: 800;
     color: #fffffe;
+}
+
+.pags{
+    font-size: 16px;
+    font-weight: 600;
+    margin: 20px 0;
+    padding: 10px;
+    border-radius: 15px;
+    border: 2px solid transparent;
+    background-color: transparent;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+}
+
+.pags:hover{
+    transition: 0.3s;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.514);
+    box-shadow: rgba(221, 221, 221, 0.616) 0px 0px 15px 0px;
 }
 
 main{
