--- a/assets/CSS/login.css
+++ b/assets/CSS/login.css
@@ -97,7 +97,7 @@ h1 {
 }
 
 .remember-forgot a:visited {
-  color: #eb0029;
+  color: #caf0f8;
 }
 
 .botao {
@@ -114,8 +114,9 @@ h1 {
   border-radius: 15px;
   width: 200px;
   border: 2px solid transparent;
-  background-color: #ffffffbb;
+  background-color: #00ffdd44;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  color: #ffffff;
 }
 
 .botao :hover {
@@ -147,5 +148,5 @@ h1 {
 }
 
 .register a:visited {
-  color: #eb0029;
+  color: #caf0f8;
 }
