--- a/CSS/style.css
+++ b/CSS/style.css
@@ -76,7 +76,7 @@ header {
 .login:hover {
     transition: 0.3s;
   text-shadow: 2px 2px rgba(0, 0, 0, 0.514);
-  box-shadow: rgba(0, 0, 0, 0.514) 0px 5px 15px;
+  box-shadow: rgba(221, 221, 221, 0.616) 0px 0px 15px 0px;
 }
 
 .navegacao {
@@ -113,7 +113,7 @@ header {
 .icon{
     position: fixed;
     right: 10px;
-    bottom: 10px;
+    bottom: 1px;
     background: none;
     border: none;
 }
@@ -135,7 +135,7 @@ header {
 
 
 main {
-    background-image: linear-gradient(to bottom, #1a0a2e, #000000); /* Gradiente escuro */
+    background-image: linear-gradient(to bottom, #1a0a2e, #000000);
     color: #f0f0f0;
     padding: 40px 20px; 
     min-height: 800px;
