--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,6 +17,10 @@ header {
     position: relative; 
 }
 
+
+
+
+
 .fundo{
     background-image: url("../imgs/Sova\,\ omen\ e\ cypher.jpg");
     background-size: cover;
@@ -32,6 +36,14 @@ header {
     width: 100%;
     height: 100%;
     z-index: -1;
+    overflow: hidden;
+}
+
+.video video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block; 
 }
 
 .title {
