--- a/CSS/features.css
+++ b/CSS/features.css
@@ -250,7 +250,7 @@ mark {
     .search-container i{
         align-self: center;
         position: absolute;
-        transform: translateY(-10%) translateX(-200%);
+        transform: translateX(-200%);
         
     }
 
@@ -269,15 +269,19 @@ mark {
 
     #theme-toggle,
     #favorite-btn {
-        top: 25px;
+        position: fixed;
+        left: auto;
+        right: 20px;
+        top: 4px;
+        z-index: 1;
         
     }
 
     #theme-toggle {
     position: fixed;
     left: auto;
-    right: 10px;
-    top: 2px;
+    right: 20px;
+    top: 4px;
     width: 35px;
     height: 35px;
     border-radius: 50%;
