--- a/CSS/login.css
+++ b/CSS/login.css
@@ -7,7 +7,7 @@
 }
 
 .container {
-  background-image: url("imgs/Omen boladao.png");
+  background-image: url("../imgs/Omen\ boladao.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
