--- a/CSS/style.css
+++ b/CSS/style.css
@@ -228,7 +228,10 @@ main {
     }
 
     .video video{
-        
+        width: 100%;
+        height: 140%;
+        object-fit: cover;
+        display: block; 
     }
 
     .pags {
