--- a/CSS/style.css
+++ b/CSS/style.css
@@ -229,7 +229,7 @@ main {
 
     .video video{
         width: 100%;
-        height: 140%;
+        height: 100vh;
         object-fit: cover;
         display: block; 
     }
