--- a/CSS/login.css
+++ b/CSS/login.css
@@ -7,6 +7,9 @@
 }
 
 .container {
+  width: 100%;
+  height: 100%;
+
   background-image: url("../imgs/Omen\ boladao.png");
   background-repeat: no-repeat;
   background-size: cover;
