--- a/CSS/style.css
+++ b/CSS/style.css
@@ -147,6 +147,8 @@ header {
 
 
 main {
+    width: 100%;
+    height: 100%;
     background-image: linear-gradient(to bottom, #1a0a2e, #000000);
     color: #f0f0f0;
     padding: 40px 20px; 
