--- a/CSS/features.css
+++ b/CSS/features.css
@@ -283,21 +283,12 @@ mark {
         font-size: 18px;
     }
 
-    #theme-toggle,
-    #favorite-btn {
-        position: fixed;
-        left: auto;
-        right: 20px;
-        top: 4px;
-        z-index: 1;
-        
-    }
 
     #theme-toggle {
     position: fixed;
     left: auto;
-    right: 20px;
-    top: 4px;
+    right: 1rem;
+    top: 1rem;
     width: 35px;
     height: 35px;
     border-radius: 50%;
@@ -305,7 +296,6 @@ mark {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 2px;
     }
 
     #favorite-btn {
